# turbo-stack

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.sh  build_system_redesign.md
.github/: pull_request_template.md
cmake/: TurboCompilerFlags.cmake  TurboOptions.cmake  add_mom_test.cmake
dev-utils/: README.md  gen_gcov.sh  gen_parse_tree.sh
docs/: dependency_dag_prompt.md
examples/: README.md
marbl_build/: CMakeLists.txt
marbl_build/src/: CMakeLists.txt
mom6_build/: CMakeLists.txt
mom6_build/config_src/infra/: CMakeLists.txt
mom6_build/exec/: CMakeLists.txt
mom6_build/pkg/: CMakeLists.txt  cvmix_gsw_link_test.F90
mom6_build/pkg/CVMix-src/src/shared/: CMakeLists.txt
mom6_build/pkg/GSW-Fortran/: CMakeLists.txt
mom6_build/pkg/GSW-Fortran/modules/: CMakeLists.txt
mom6_build/pkg/GSW-Fortran/toolbox/: CMakeLists.txt
mom6_build/src/: CMakeLists.txt
mom6_build/src/ALE/: CMakeLists.txt
mom6_build/src/core/: CMakeLists.txt
mom6_build/src/diagnostics/: CMakeLists.txt
mom6_build/src/equation_of_state/: CMakeLists.txt
mom6_build/src/framework/: CMakeLists.txt
mom6_build/src/ice_shelf/: CMakeLists.txt
mom6_build/src/initialization/: CMakeLists.txt
mom6_build/src/ocean_data_assim/: CMakeLists.txt
mom6_build/src/parameterizations/: CMakeLists.txt
mom6_build/src/tracer/: CMakeLists.txt
mom6_build/src/user/: CMakeLists.txt
src/amrex_mini_app/: CMakeLists.txt  build_and_run.sh  build_and_run_derecho.sh  build_and_run_local_matrix.sh  create_spack_environment.sh  ncar_container_environment_variable_standardization.sh  setup_environment.sh
src/amrex_mini_app/cmake/: GTestHelpers.cmake
src/amrex_mini_app/examples/: CMakeLists.txt  domain_example.cpp  initialization_mini_app.cpp  mini_app.cpp  tripolar_grid_example.cpp
src/amrex_mini_app/src/: CMakeLists.txt  tripolar_grid.cpp
src/amrex_mini_app/src/domain/: CMakeLists.txt  cartesian_domain.cpp  cartesian_domain.h  cartesian_domain_test.cpp  domain.cpp  domain.h  domain_test.cpp
src/amrex_mini_app/src/field/: CMakeLists.txt  field.cpp  field.h  field_container.cpp  field_container.h  field_container_test.cpp  field_test.cpp
src/amrex_mini_app/src/geometry/: CMakeLists.txt  cartesian_geometry.cpp  cartesian_geometry.h  cartesian_geometry_test.cpp  geometry.h
src/amrex_mini_app/src/grid/: CMakeLists.txt  cartesian_grid.cpp  cartesian_grid.h  cartesian_grid_test.cpp  grid.h
src/amrex_mini_app/src/testing_utils/: CMakeLists.txt  amrex_test_environment.h
src/amrex_mini_app/src/tripolar_helper/: CMakeLists.txt  tripolar_grid.cpp  tripolar_grid.h  tripolar_grid_test.cpp
src/development_tests/amrex/tripolar_grid/: CMakeLists.txt  README.md  build_and_run.sh  derecho_build_and_run.sh  derecho_spack.yaml  example.cpp  plot_hdf5.py  spack.yaml  tripolar_grid.cpp  tripolar_grid.h  tripolar_grid_test.cpp
src/development_tests/amrex/tripolar_grid/examples/: CMakeLists.txt  example_from_amrex_developers.cpp  mini_app.cpp  tripolar_grid_example.cpp
src/development_tests/amrex/tripolar_grid/postprocessing/: plot_hdf5.py
src/development_tests/amrex/tripolar_grid/spack/: ci_container_spack.yaml  spack.yaml
src/development_tests/amrex/tripolar_grid/src/: CMakeLists.txt  field.cpp  field.h  field_test.cpp  geometry.h  geometry_test.cpp  grid.h  grid_test.cpp  tripolar_grid.cpp  tripolar_grid.h  tripolar_grid_test.cpp
src/development_tests/amrex/tripolar_grid/src/field/: CMakeLists.txt  field.cpp  field.h  field_test.cpp
src/development_tests/amrex/tripolar_grid/src/geometry/: geometry.h  geometry_test.cpp
src/development_tests/amrex/tripolar_grid/src/grid/: CMakeLists.txt  cartesian_grid.cpp  cartesian_grid.h  cartesian_grid_test.cpp  grid.h  grid_test.cpp
src/development_tests/amrex/tripolar_grid/src/testing_utils/: CMakeLists.txt
src/development_tests/amrex/tripolar_grid/src/tripolar_helper/: CMakeLists.txt  tripolar_grid.cpp  tripolar_grid.h  tripolar_grid_test.cpp
tests/: CMakeLists.txt  MOM_test_case.F90  Makefile  README.md  mom_init.pf
tests/cmake/: add_mom_test.cmake  find_mom_dependencies.cmake
tests/interface/: CMakeLists.txt  MOM_comms_infra_test.pf  MOM_field_checksum.pf  MOM_test_case.pf  mom_init.pf
tests/interface/MOM_comms_infra/: CMakeLists.txt  test_all_across_pes.pf  test_any_across_pes.pf  test_broadcast_IntArray.pf  test_broadcast_RealArray.pf  test_broadcast_char.pf  test_broadcast_int1D.pf  test_broadcast_int320D.pf  test_broadcast_int640D.pf  test_broadcast_real0D.pf  test_broadcast_real1D.pf  test_broadcast_real2D.pf  test_broadcast_real3D.pf  test_field_checksum_real640d.pf  test_field_checksum_real641d.pf  test_field_checksum_real642d.pf  test_field_checksum_real643d.pf  test_field_checksum_real644d.pf  test_field_checksum_real64_0d_masked.pf  test_field_checksum_real64_1d_masked.pf  test_field_checksum_real64_2d_masked.pf  test_field_checksum_real64_3d_masked.pf  test_field_checksum_real64_4d_masked.pf  test_field_checksum_real_3d.pf  test_field_checksum_real_4d.pf  test_get_pelist_all_ranks.pf  test_max_across_pes_int_0d.pf  test_max_across_pes_real64_0d.pf  test_max_across_pes_real64_1d.pf  test_min_across_pes_int_0d.pf  test_min_across_pes_real64_0d.pf  test_min_across_pes_real64_1d.pf  test_num_pes.pf  test_pe_here.pf  test_pelistA.pf  test_pelistB.pf  test_pelistC.pf  test_set_pelist_split.pf  test_set_pelist_to_single_then_reset.pf  test_sum_across_pes_int32_0d.pf  (+11 more)
tests/interface/MOM_coms_helpers/: CMakeLists.txt  test_root_pe.pf
tests/interface/MOM_coms_infra/: CMakeLists.txt  test_field_checksum_real_0d.pf  test_field_checksum_real_1d.pf  test_field_checksum_real_2d.pf  test_max_across_pes_int_0d.pf  test_max_across_pes_real64_1d.pf  test_sum_across_pes_int64_1d.pf  test_sum_across_pes_int64_2d.pf
tests/interface/MOM_domain_infra/: CMakeLists.txt  test_compute_block_extent.pf  test_compute_extent.pf  test_create_mom_domain.pf
tests/interface/array_mod/: CMakeLists.txt  test_copy2array.pf  test_copy2fortran.pf  test_duplicate.pf  test_duplicate_full.pf  test_duplicate_subsection.pf
(+76 files in other folders)
